--- a/style.css
+++ b/style.css
@@ -21,11 +21,6 @@ h5 {
   color: white;
 }
 
-
-h5 {
-  color: white;
-}
-
 .title {
   width: 50%;
   text-align: justify;
@@ -96,6 +91,7 @@ h5 {
   margin-top: 32px;
   margin-left: 3px;
 }
+
  span {
    margin-left: 15px;
  }
@@ -197,4 +193,51 @@ padding-top: 15px;
   text-decoration: none;
   padding: 10px;
  }
+    /* Media for mobile */
+    @media only screen and (max-width:688px){
+      .section1{
+        width:1350px;
+          height: 700px;
+          background-color: #161616;
+          margin-left: 20px;
+          display: flex;
+          border-radius: 1%;
+      }
+            h5 {
+              color: white;
+              font-size: 25px;
+            }
+            .button{
+              height: 50px;
+                width: 150px;
+            }
+        .button-grid {
+            display:block;
+            }
+             .side-box{
+              width: 250px;
+                height: 220px;
+              margin-left: 320px;
+             }
+             .cards {
+                grid-template-columns: repeat( 1, 1fr);
+                }
+            .card {
+             width: 1000px;
+             height: 400px;
+            border: 1px solid black;
+              }
+              
+              .cards-title{
+                font-size: 30px;
+                font-weight: 100px
+                
+              }
+              button{
+                width: 200px;
+                height: 60px;
+                font-size: 40px;
+                margin-top: 10px;
+              }
     
+    }
